<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <include
        android:id="@+id/include2"
        layout="@layout/custom_toolbar_layout"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/book_appointment_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/lawyerphoto_imageview"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center|top"
                android:layout_marginStart="10dp"
                android:src="@drawable/background_image" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:background="@color/colorLightGray" />
        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lawyer_details_string"
            android:textColor="@color/backgroundGradientStartColor"
            android:textSize="20sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/static_lawyer_email_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lawyer_email_string"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/lawyer_email_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/blackColor"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/static_lawyer_name_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lawyer_name_string"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/lawyer_name_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/blackColor"
                android:textSize="15sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/static_lawyer_spec_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lawyer_spec_string"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/lawyer_spec_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/blackColor"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/static_lawyer_city_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lawyer_city_string"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/lawyer_city_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/blackColor"
                android:textSize="15sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/static_lawyer_fee_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lawyer_fee_string"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/lawyer_fee_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="$ 0.0"

                android:textColor="@android:color/holo_green_light"
                android:textSize="15sp" />


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/book_appointment_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/backgroundGradientStartColor"
        android:gravity="center"
        android:text="@string/book_appointment_string"
        android:textColor="@color/colorPureWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>