<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/custom_toolbar_layout" />

    <TextView
        android:id="@+id/book_app_title"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_height="80dp"
        android:textColor="@color/backgroundGradientStartColor"
        android:textSize="14sp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/timeWrapper"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:theme="@style/EditTextStyle"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/time_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/time"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/time_hint"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="true"
            android:maxLength="60"
            android:textSize="14sp"
            android:inputType="datetime"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/DateWrapper"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:theme="@style/EditTextStyle"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/date_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="true"
            android:drawableStart="@drawable/calendar"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/date_hint"
            android:maxLength="60"
            android:textSize="14sp"
            android:inputType="date"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/descriptionWrapper"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:theme="@style/EditTextStyle"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/file"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/description_hint"
            android:maxLength="200"
            android:maxLines="3"
            android:textSize="14sp"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>




</LinearLayout>