<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:id="@+id/createaccount_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="65dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/userphoto_imageview"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center|top"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/background_image" />


                    <ImageView
                        android:id="@+id/create_account_camera_imageview"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerInParent="true"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:src="@drawable/camera"
                        android:visibility="gone"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/colorLightGray" />
                </RelativeLayout>

                <!--Edit text-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/nameWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:theme="@style/EditTextStyle"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="@dimen/drawable_padding"
                        android:drawableStart="@drawable/user"
                        android:hint="@string/name_hint"
                        android:inputType="text"
                        android:maxLength="60"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/emailWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:theme="@style/EditTextStyle"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="@dimen/drawable_padding"
                        android:drawableStart="@drawable/envolpe"
                        android:hint="@string/email_hint"
                        android:imeActionLabel="URdone"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:maxLength="30"
                        android:textColor="@color/colorDarkGray"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:text="Tap on this field to change your role"
                    android:textColor="@color/colorLightGray"
                    android:textSize="12sp" />
                <!--Edit text-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/roleWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:theme="@style/EditTextStyle"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/role_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="@dimen/drawable_padding"
                        android:drawableStart="@drawable/user"
                        android:focusable="false"
                        android:hint="@string/role_hint"
                        android:textSize="14sp"
                        tools:ignore="TextFields" />

                </android.support.design.widget.TextInputLayout>



                <android.support.design.widget.TextInputLayout
                    android:id="@+id/specialisationWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:theme="@style/EditTextStyle"
                    android:visibility="gone"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/specialisation_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="@dimen/drawable_padding"
                        android:drawableStart="@drawable/title"
                        android:hint="@string/specialisation_hint"
                        android:imeActionLabel="URdone"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:maxLength="100"
                        android:textColor="@color/colorDarkGray"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/feeWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:theme="@style/EditTextStyle"
                    android:visibility="gone"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/fee_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="@dimen/drawable_padding"
                        android:drawableStart="@drawable/money"
                        android:hint="@string/fee_hint"
                        android:imeActionLabel="URdone"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="5"
                        android:textColor="@color/colorDarkGray"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/cityWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:theme="@style/EditTextStyle"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/city_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="@dimen/drawable_padding"
                        android:drawableStart="@drawable/place"
                        android:hint="@string/city_hint"
                        android:imeActionLabel="URdone"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:maxLength="100"
                        android:textColor="@color/colorDarkGray"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>
        </ScrollView>

        <include
            layout="@layout/custom_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="65dp" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>